--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -51,9 +51,9 @@
     name=Advantage Actor-Critic,
     description={Algorithm that uses both an actor (policy) and a critic (value function) to learn optimal policies by estimating the advantage of actions taken}
 }
-\newglossaryentry{proximalpolicyoptimization}
+\newglossaryentry{proximalpolicyoptimisation}
 {
-    name=Proximal Policy Optimization,
+    name=Proximal Policy Optimisation,
     description={Algorithm that optimises policies by ensuring that updates to the policy are not too large, maintaining a balance between exploration and exploitation}
 }
 \newglossaryentry{deepdeterministicpolicygradient}
@@ -95,7 +95,6 @@
     text={hyper-parameter},
     description={Parameter that is set before the learning process begins and control the learning process of a machine learning model, such as learning rate, batch size, and number of layers in a neural network}
 }
-
 \newglossaryentry{efficientfrontier}{
     name=Efficient Frontier,
     text={efficient frontier},
@@ -106,13 +105,46 @@
     text={Modern Portfolio Theory},
     description={Investment theory that aims to construct a portfolio of assets that maximises expected return for a given level of risk, or minimises risk for a given level of expected return, through diversification}
 }
+\newglossaryentry{supervisedlearning}{
+    name=Supervised Learning,
+    description={Machine learning task where a model is trained on labelled data to learn a mapping from inputs to outputs}
+}
+\newglossaryentry{unsupervisedlearning}{
+    name=Unsupervised Learning,
+    description={Machine learning task where a model learns patterns or structures in unlabelled data without explicit supervision}
+}
+\newglossaryentry{deepneuralnetwork}{
+    name=Deep Neural Network,
+    text={deep neural network},
+    description={Type of artificial neural network with multiple layers that can learn complex representations and patterns in data}
+}
+\newglossaryentry{markovdecisionprocess}{
+    name=Markov Decision Process,
+    text={Markov Decision Process},
+    description={Mathematical framework for modelling decision-making in situations where outcomes are partly random and partly under the control of a decision maker, characterised by states, actions, rewards, and transition probabilities}
+}
+\newglossaryentry{partiallyobservablemarkovdecisionprocess}{
+    name=Partially Observable Markov Decision Process,
+    text={Partially Observable Markov Decision Process},
+    description={Extension of \Gls{markovdecisionprocess} where the agent does not have access to the complete state information, requiring the use of belief states or observations to make decisions}
+}
+\newglossaryentry{bellmanequations}{
+    name=Bellman Equations,
+    text={Bellman equations},
+    description={Set of equations that describe the relationship between the value of a state or action and the values of subsequent states or actions in dynamic programming and reinforcement learning, used to compute optimal policies} 
+}
+\newglossaryentry{entropy}{
+    name=Entropy,
+    text={entropy},
+    description={Measure of uncertainty or randomness in a system, often used in the context of information theory and reinforcement learning to encourage exploration}
+}
 
 \newacronym{dl}{DL}{\Gls{deeplearning}}
 \newacronym{ml}{ML}{\Gls{machinelearning}}
 \newacronym{rl}{RL}{\Gls{reinforcementlearning}}
 \newacronym{drl}{DRL}{\Gls{deepreinforcementlearning}}
 \newacronym{a2c}{A2C}{\Gls{advantageactorcritic}}
-\newacronym{ppo}{PPO}{\Gls{proximalpolicyoptimization}}
+\newacronym{ppo}{PPO}{\Gls{proximalpolicyoptimisation}}
 \newacronym{ddpg}{DDPG}{\Gls{deepdeterministicpolicygradient}}
 \newacronym{td3}{TD3}{\Gls{twindelayeddeepdeterministicpolicygradient}}
 \newacronym{sac}{SAC}{\Gls{softactorcritic}}
@@ -121,3 +153,10 @@
 \newacronym{ai}{AI}{\Gls{artificialintelligence}}
 \newacronym{xai}{XAI}{\Gls{explainableai}}
 \newacronym{mpt}{MPT}{\Gls{modernportfoliotheory}}
+\newacronym{dnn}{DNN}{\Glspl{deepneuralnetwork}}
+\newacronym{mdp}{MDP}{\Gls{markovdecisionprocess}}
+\newacronym{pomdp}{POMDP}{\Gls{partiallyobservablemarkovdecisionprocess}}
+\newacronym{dqn}{DQN}{Deep Q-Network}
+\newacronym{a3c}{A3C}{Asynchronous Advantage Actor-Critic}
+\newacronym{trpo}{TRPO}{Trust Region Policy Optimisation}
+\newacronym{dpg}{DPG}{Deterministic Policy Gradient}
